Fix Bug 1483692 - Fix giant scrollbars on RTL add search shortcut menu (#4350)

--- a/content-src/components/TopSites/_TopSites.scss
+++ b/content-src/components/TopSites/_TopSites.scss
@@ -517,7 +517,7 @@ $half-base-gutter: $base-gutter / 2;
   // CSS styled checkbox
   [type='checkbox']:not(:checked),
   [type='checkbox']:checked {
-    left: -9999px;
+    offset-inline-start: -9999px;
     position: absolute;
   }
 
